Api : deleteContain et changeQuantityOfContain
